@@ -1,4 +1,23 @@
 
+- état de mise à jour des bases:
+
+revue radicale: pas besoin de connaître l'état exact des bases, juste savoir si le module est à jour, moyennement à jour, pas du tout à jour. Plus une date de mise à jour. 
+
+* remplissage de la structure struct uhuru_db_info dans les modules
+** clamav: code de test fait, copier dans module
+** module 5.2: à faire
+
+* décider de la signature de la fonction de récupération d'infos par module, fonction qui est mise dans struct uhuru_module {}
+
+    enum uhuru_file_status (*db_info_fun)(struct uhuru_module * module, size_t *p_ndb, struct uhuru_db_info **infov)
+
+* faire un dbinfo.c dans src/lib qui appelle les fonctions pour chaque module
+** d'abord version locale
+** puis version remote avec IPC
+
+* faire un petit proto de l'interface graphique pour voir comment c'est le mieux pour récupérer les infos
+
+
 - scan
 * déplacer le comptage des fichiers dans scan.c, parcourir une seule fois l'arborescence pour le compte de fichiers, mémoriser les chemins dans un tableau (mémoire?), ne pas reparcourir l'arborescence pour le scan
 * ajouter un argument dans les callbacks (file_count, file_report, scan_end)
