@@ -7,6 +7,9 @@
 extern "C" {
 #endif
 
+struct uhuru;
+struct uhuru_module;
+
 enum uhuru_mod_status {
   UHURU_MOD_OK,
   UHURU_MOD_INIT_ERROR,
@@ -14,12 +17,24 @@ enum uhuru_mod_status {
   UHURU_MOD_CLOSE_ERROR,
 };
 
-struct uhuru;
-struct uhuru_module;
+enum uhuru_update_status {
+  UHURU_UPDATE_OK,
+  UHURU_UPDATE_LATE,
+  UHURU_UPDATE_CRITICAL,
+  UHURU_UPDATE_NON_AVAILABLE,
+};
 
 struct uhuru_conf_entry {
   const char *directive;
   enum uhuru_mod_status (*conf_fun)(struct uhuru_module *module, const char *directive, const char **argv);
+};
+
+struct uhuru_base_info {
+  const char *name;
+  const char *date;
+  const char *version;
+  unsigned int signature_count;
+  const char *full_path;
 };
 
 struct uhuru_module {
@@ -31,18 +46,22 @@ struct uhuru_module {
 
   enum uhuru_file_status (*scan_fun)(struct uhuru_module *module, const char *path, const char *mime_type, char **pmod_report);
 
-  enum uhuru_file_status (*db_info_fun)(struct uhuru_module * module);
-
   enum uhuru_mod_status (*close_fun)(struct uhuru_module *module);
+
+  enum uhuru_update_status (*update_check_fun)(struct uhuru_module *module);
 
   const char *name;
 
   size_t size;
 
-  /* following fields will be initialized by the library */
   enum uhuru_mod_status status;
 
   void *data;
+
+  enum uhuru_update_status update_status;
+
+  /* NULL terminated array of pointers to struct base_info */
+  struct uhuru_base_info **base_infos;
 
   struct uhuru *uhuru;
 };
