@@ -1,0 +1,8 @@
+#ifndef _LIBUHURU_BASEINFOP_H_
+#define _LIBUHURU_BASEINFOP_H_
+
+#include <libuhuru/module.h>
+
+enum uhuru_update_status uhuru_base_info_update(struct uhuru_module *module);
+
+#endif
